# i18n-readme

./: README.md  README_ja.md  README_ko.md  README_zh.md  pyproject.toml
i18n_readme/: agent.py  cli.py  prompt.py
